Fixed domain definition

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -13,7 +13,7 @@
    "id": "0edbeb60",
    "metadata": {},
    "source": [
-    "Let $(x,y,z)\\in[x_{\\text{min}}, x_{\\text{max}}]\\times[y_{\\text{min}}, y_{\\text{max}}]\\times[z_{\\text{min}}, z_{\\text{max}}]=[0, 2\\pi]^3=\\Omega$, \n",
+    "Let $(x,y,z)\\in]x_{\\text{min}}, x_{\\text{max}}[\\times]y_{\\text{min}}, y_{\\text{max}}[\\times]z_{\\text{min}}, z_{\\text{max}}]=]0, 2\\pi[^3=\\Omega$, \n",
     "then the Poisson's problem is defined as\n",
     "\\begin{equation}\n",
     "    \\begin{split}\n",
@@ -296,7 +296,7 @@
     "for i in range(len(Ns)):\n",
     "    print(\"%d & $%.2f$ \\\\\\\\\" % (Ns[i], times[i]))\n",
     "\n",
-    "print(\"N Error\")\n",
+    "print(\"N Time\")\n",
     "for i in range(len(Ns)):\n",
     "    print(\"%d  %.6f\" % (Ns[i], times[i]))"
    ]
